// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Number UU5.Bricks.Number - onChange props() 1`] = `
<Number
  className={null}
  controlled={true}
  decimalSeparator={null}
  disabled={false}
  hidden={false}
  id="uuID"
  mainAttrs={null}
  maxDecimalLength={null}
  minDecimalLength={null}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onChange={[Function]}
  pureRender={false}
  ref_={null}
  rounded={null}
  selected={false}
  style={null}
  thousandSeparator={null}
  tooltip={null}
  value={5223.65663}
/>
`;

exports[`UU5.Bricks.Number className 1`] = `
<span
  className="uu5-bricks-number my-classname uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number controlled 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number controlled 2`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number controlled 3`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number controlled 4`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number decimalSeparator 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number decimalSeparator 2`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number decimalSeparator 3`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number decimalSeparator 4`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658 14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number decimalSeparator 5`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658 14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number decimalSeparator 6`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number default props 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number disabled 1`] = `
<span
  className="uu5-bricks-number uu5-common-disabled uu5-bricks-number-positive"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "225&nbsp;658,14522",
      }
    }
  />
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</span>
`;

exports[`UU5.Bricks.Number disabled 2`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number disabled 3`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number disabled 4`] = `
<span
  className="uu5-bricks-number uu5-common-disabled uu5-bricks-number-positive"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "225&nbsp;658,14522",
      }
    }
  />
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</span>
`;

exports[`UU5.Bricks.Number docKit examples UU5.Bricks.Number should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
    id="uuID1"
    style={Object {}}
    title={null}
  >
    <div
      className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s3 uu5-col-m4 uu5-col-l4 uu5-col-xl4"
      style={Object {}}
      title={null}
    >
      <span
        className="uu5-bricks-number uu5-bricks-number-positive"
        dangerouslySetInnerHTML={
          Object {
            "__html": "876,1564",
          }
        }
        style={Object {}}
        title={null}
      />
    </div>
    <div
      className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s8 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
      style={Object {}}
      title={null}
    >
      <span
        className="uu5-bricks-number uu5-bricks-number-positive"
        dangerouslySetInnerHTML={
          Object {
            "__html": "8,766,641,564",
          }
        }
        style={Object {}}
        title={null}
      />
    </div>
  </div>
  <div
    className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
    id="uuID3"
    style={Object {}}
    title={null}
  >
    <div
      className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s7 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
      style={Object {}}
      title={null}
    >
      <span
        className="uu5-bricks-number uu5-bricks-number-positive"
        dangerouslySetInnerHTML={
          Object {
            "__html": "87&nbsp;661&nbsp;564.435",
          }
        }
        style={Object {}}
        title={null}
      />
    </div>
    <div
      className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s8 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
      style={Object {}}
      title={null}
    >
      <span
        className="uu5-bricks-number uu5-bricks-number-negative"
        dangerouslySetInnerHTML={
          Object {
            "__html": "-27&nbsp;415,789",
          }
        }
        style={Object {}}
        title={null}
      />
    </div>
  </div>
  <div
    className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s7 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    style={Object {}}
    title={null}
  >
    <span
      className="uu5-bricks-number uu5-bricks-number-negative"
      dangerouslySetInnerHTML={
        Object {
          "__html": "-27&nbsp;415,7896300000",
        }
      }
      style={Object {}}
      title={null}
    />
  </div>
  <div
    className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s4 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    style={Object {}}
    title={null}
  >
    <span
      className="uu5-bricks-number uu5-bricks-number-negative"
      dangerouslySetInnerHTML={
        Object {
          "__html": "-27&nbsp;415,79",
        }
      }
      style={Object {}}
      title={null}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Number hidden 1`] = `
<span
  className="uu5-bricks-number uu5-common-hidden uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number hidden 2`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number hidden 3`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number hidden 4`] = `
<span
  className="uu5-bricks-number uu5-common-hidden uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number id 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number mainAttrs 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number maxDecimalLength 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number minDecimalLength 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,1452200000",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number name 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number nestingLevel 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number nestingLevel 2`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number nestingLevel 3`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number nestingLevel 4`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number nestingLevel 5`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number nestingLevel 6`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number nestingLevel 7`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number nestingLevel 8`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number nestingLevel 9`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number nestingLevel 10`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number nestingLevel 11`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number nestingLevel 12`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number nestingLevel 13`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number nestingLevel 14`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number nestingLevel 15`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number nestingLevel 16`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number nestingLevel 17`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number nestingLevel 18`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number nestingLevel 19`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number nestingLevel 20`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number noIndex 1`] = `
<span
  className="uu5-bricks-number uu5-noindex uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number noIndex 2`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number noIndex 3`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number noIndex 4`] = `
<span
  className="uu5-bricks-number uu5-noindex uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number pureRender 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number pureRender 2`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number pureRender 3`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number pureRender 4`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number rounded 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number rounded 2`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,15",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number rounded 3`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,15",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number rounded 4`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number rounded 5`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number rounded 6`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,15",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number selected 1`] = `
<span
  className="uu5-bricks-number uu5-common-selected uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number selected 2`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number selected 3`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number selected 4`] = `
<span
  className="uu5-bricks-number uu5-common-selected uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number style 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Number style 2`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Number style 3`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Number style 4`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Number thousandSeparator 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number thousandSeparator 2`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225.658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number thousandSeparator 3`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225.658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number thousandSeparator 4`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225 658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number thousandSeparator 5`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225 658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number thousandSeparator 6`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225.658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number tooltip 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;

exports[`UU5.Bricks.Number value 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225&nbsp;658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;
